[package]
name = "debugdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = "0.26.0"
fallible-iterator = "0.2.0"
object = "0.26.0"
structopt = "0.3.25"
indexmap = "1.7"
scroll = "0.10"
rustyline = "9.0"
ansi_term = "0.12.1"

[profile.release]
debug = true
