[package]
name = "debugdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = "0.26.1"
fallible-iterator = "0.2.0"
object = "0.26.0"
indexmap = "1.7"
scroll = "0.10"
rustyline = "11.0"
ansi_term = "0.12.1"
anyhow = { version = "1.0.68", features = ["backtrace"] }
rangemap = "1.3.0"
clap = { version = "4.3.5", features = ["derive"] }
thiserror = "1.0.40"
regex = "1.8.4"
parse_int = "0.6.0"

[profile.release]
debug = true
